--- a/website/index.html
+++ b/website/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Circuit-Synth - Professional Hierarchical Circuit Design</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="alternate icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/favicon.svg">
 </head>
 <body>
     <header>
@@ -299,7 +301,6 @@ uv run python circuit-synth/main.py
                 </div>
             </div>
         </section>
-    </main>
 
         <section id="community" class="section">
             <div class="container">
