update website phrasing

--- a/website/index.html
+++ b/website/index.html
@@ -103,18 +103,18 @@ circuit.generate_kicad_project("voltage_regulator")</code></pre>
                     <div class="advanced-feature">
                         <div class="feature-icon">🏗️</div>
                         <h3>Professional Workflow</h3>
-                        <p>Work in traditional KiCad or Python - your choice. Make changes in either environment and the project auto-updates. KiCad remains the source of truth while Python provides powerful automation.</p>
+                        <p>Work in traditional KiCad or Python - your choice. Make changes in either environment, then sync when ready. You control when updates happen. KiCad remains the source of truth while Python provides powerful automation.</p>
                         <div class="feature-example">
-                            <code>KiCad ↔ Python ↔ Auto-sync</code>
+                            <code>KiCad ↔ Python ↔ User-controlled sync</code>
                         </div>
                     </div>
                     
                     <div class="advanced-feature">
                         <div class="feature-icon">↔️</div>
                         <h3>Works With Existing Projects</h3>
-                        <p>Import existing KiCad projects, enhance with Python automation, then export back to clean KiCad files. No need to start from scratch - enhance what you already have.</p>
+                        <p>Import existing KiCad projects, enhance with Python automation, then export only your changes back to the KiCad project without altering anything else. One-to-one mapping: every Python component and connection becomes exactly one KiCad component and connection. Nothing hidden, everything transparent.</p>
                         <div class="feature-example">
-                            <code>Import → Enhance → Export → Deploy</code>
+                            <code>Python Component = KiCad Component (1:1 mapping)</code>
                         </div>
                     </div>
                     
