--- a/website/index.html
+++ b/website/index.html
@@ -121,9 +121,9 @@ circuit.generate_kicad_project("voltage_regulator")</code></pre>
                     <div class="advanced-feature">
                         <div class="feature-icon">🤖</div>
                         <h3>AI-Enhanced Workflow</h3>
-                        <p>Tight integration with Claude Code for natural language circuit design. Component search, troubleshooting, design review, and optimization through intelligent AI assistance.</p>
+                        <p>Let Claude Code design entire circuit boards from natural language descriptions. It searches the web, finds available components, tracks design decisions, records failures, and iterates until you have a complete, manufacturable design with JLCPCB-verified parts.</p>
                         <div class="feature-example">
-                            <code>"Find STM32 with 3 SPIs available on JLCPCB"</code>
+                            <code>"Design an ESP32 IoT sensor with LoRaWAN and solar charging"</code>
                         </div>
                     </div>
                     
