--- a/website/index.html
+++ b/website/index.html
@@ -103,18 +103,18 @@ circuit.generate_kicad_project("voltage_regulator")</code></pre>
                     <div class="advanced-feature">
                         <div class="feature-icon">🏗️</div>
                         <h3>Professional Workflow</h3>
-                        <p>Work in traditional KiCad or Python - your choice. Make changes in either environment, then sync when ready. You control when updates happen. KiCad remains the source of truth while Python provides powerful automation.</p>
+                        <p>Work in traditional KiCad or Python - your choice. Make changes in either environment, then sync when ready. One-to-one mapping: every Python component and connection becomes exactly one KiCad component and connection. You control when updates happen, KiCad remains the source of truth, and nothing is hidden or altered unexpectedly.</p>
                         <div class="feature-example">
-                            <code>KiCad ↔ Python ↔ User-controlled sync</code>
+                            <code>KiCad ↔ Python ↔ Transparent 1:1 mapping</code>
                         </div>
                     </div>
                     
                     <div class="advanced-feature">
                         <div class="feature-icon">↔️</div>
                         <h3>Works With Existing Projects</h3>
-                        <p>Import existing KiCad projects, enhance with Python automation, then export only your changes back to the KiCad project without altering anything else. One-to-one mapping: every Python component and connection becomes exactly one KiCad component and connection. Nothing hidden, everything transparent.</p>
+                        <p>Import your existing KiCad projects and enhance them with Python automation. No need to start from scratch - add new functionality to designs you've already invested time in.</p>
                         <div class="feature-example">
-                            <code>Python Component = KiCad Component (1:1 mapping)</code>
+                            <code>Existing Design + Python Enhancement = Better Board</code>
                         </div>
                     </div>
                     
