--- a/website/index.html
+++ b/website/index.html
@@ -159,8 +159,8 @@ circuit.generate_kicad_project("voltage_regulator")</code></pre>
 
         <section id="claude-code-contributors" class="section">
             <div class="container">
-                <h2>🤖 Built for Claude Code</h2>
-                <p class="section-subtitle">Circuit-synth puts Claude Code first - making circuit design and contribution as easy as asking a question</p>
+                <h2>🤖 Built for Intelligent Automation</h2>
+                <p class="section-subtitle">Circuit-synth is built for intelligent automation. We chose Claude Code as our AI engine because it delivers the most advanced agentic coding experience available today</p>
                 
                 <div class="claude-code-grid">
                     <div class="claude-code-feature">
