--- a/website/index.html
+++ b/website/index.html
@@ -121,9 +121,9 @@ circuit.generate_kicad_project("voltage_regulator")</code></pre>
                     <div class="advanced-feature">
                         <div class="feature-icon">🤖</div>
                         <h3>AI-Enhanced Workflow</h3>
-                        <p>Let Claude Code design entire circuit boards from natural language descriptions. It searches the web, finds available components, tracks design decisions, records failures, and iterates until you have a complete, manufacturable design with JLCPCB-verified parts.</p>
+                        <p>A true AI assistant for every phase of professional EE workflow. Claude Code + Circuit-synth can generate complete circuits independently, assist with design and troubleshooting, automatically track progress and decisions, manage BOMs, and even help with FMEA analysis. From initial concept to production-ready design.</p>
                         <div class="feature-example">
-                            <code>"Design an ESP32 IoT sensor with LoRaWAN and solar charging"</code>
+                            <code>"Design an ESP32 IoT sensor" → Complete manufacturable design</code>
                         </div>
                     </div>
                     
