--- a/website/index.html
+++ b/website/index.html
@@ -267,14 +267,14 @@ uv run python circuit-synth/main.py
                     <h3>KiCad Plugin - Direct Claude Code Access</h3>
                     <div class="plugin-content">
                         <div class="plugin-description">
-                            <p>Our KiCad schematic plugin connects directly to Claude Code through KiCad's legacy BOM system. Ask questions about your circuit design right from the schematic editor.</p>
+                            <p>Our KiCad plugin cleverly hijacks the BOM generation system to create a direct line to Claude Code. What KiCad designed for parts lists, we use for AI-powered circuit analysis. It's unconventional, but it works brilliantly!</p>
                             <ul class="plugin-features">
                                 <li>💬 <strong>Ask About Circuits:</strong> "How can I improve this power supply?" or "What's wrong with this amplifier?"</li>
                                 <li>🤖 <strong>Claude Code Bridge:</strong> Uses KiCad's BOM script system as a backdoor to Claude Code</li>
                                 <li>⚡ <strong>Schematic Context:</strong> Claude Code sees your complete circuit for intelligent analysis</li>
                                 <li>🔧 <strong>Design Suggestions:</strong> Get optimization tips, component alternatives, and troubleshooting help</li>
                             </ul>
-                            <p class="plugin-note"><em>Leverages KiCad's existing BOM generation system for seamless AI integration</em></p>
+                            <p class="plugin-note"><em>Who knew KiCad's BOM arbitrary Python execution was the perfect backdoor for AI circuit analysis? Sometimes the best solutions hide in plain sight.</em></p>
                         </div>
                         <div class="plugin-image">
                             <img src="kicad_plugin_sch.png" alt="KiCad Plugin in Action" class="kicad-screenshot">
