--- a/website/index.html
+++ b/website/index.html
@@ -275,6 +275,7 @@ uv run python circuit-synth/main.py
                                 <li>🔧 <strong>Design Suggestions:</strong> Get optimization tips, component alternatives, and troubleshooting help</li>
                             </ul>
                             <p class="plugin-note"><em>Who knew KiCad's BOM arbitrary Python execution could serve as a quirky backdoor for AI circuit analysis? It's not elegant, but it gets the job done.</em></p>
+                            <p class="plugin-acknowledgment"><strong>Thank you BlackCoffee!!</strong> Your insights on <a href="https://forum.kicad.info/t/schematics-bom-tools-usefulness-as-cli/46619" target="_blank">this KiCad forum discussion</a> helped inspire this creative approach.</p>
                         </div>
                         <div class="plugin-image">
                             <img src="kicad_plugin_sch.png" alt="KiCad Plugin in Action" class="kicad-screenshot">
