fix: Correct CLI provider command template and pipeline state stage result access
- Fix TACWorkerAdapter to access stage_results dict correctly
- Update claude-cli command template to use stdin piping
- Add bash wrapping for proper file redirection
- Use absolute paths with .resolve() for file references
- Add JSON parsing for workflow_config in dashboard API

Fixes the 'Stage result not found' error and enables actual Claude CLI execution.

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -47,6 +47,10 @@
                         <span class="nav-icon">🔄</span>
                         Active Tasks
                     </button>
+                    <button class="nav-item" data-view="conversations">
+                        <span class="nav-icon">💬</span>
+                        Conversations
+                    </button>
                     <button class="nav-item" data-view="templates">
                         <span class="nav-icon">🤖</span>
                         Agent Templates
@@ -79,6 +83,24 @@
                     </div>
                     <div class="task-list" id="active-task-list">
                         <div class="loading">Loading active tasks...</div>
+                    </div>
+                </div>
+
+                <!-- Conversations View -->
+                <div class="view hidden" id="view-conversations">
+                    <div class="view-header">
+                        <h2>LLM Conversations</h2>
+                        <button class="btn-refresh" onclick="loadConversations()">🔄 Refresh</button>
+                    </div>
+                    <div class="conversations-container">
+                        <div class="conversations-sidebar" id="conversations-sidebar">
+                            <div class="loading">Loading conversations...</div>
+                        </div>
+                        <div class="conversation-detail" id="conversation-detail">
+                            <div class="empty-state">
+                                <p>Select a conversation to view details</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
